Rewrite JVM article: story-style, production war stories, diagrams, Java 8-21